# node-graphs.c

./: .gitignore  CMakeLists.txt  pack_release.sh
.github/workflows/: cmake-single-platform.yml
include/: binary_node.h  graph.h  node.h  tree.h
src/: binary_node.c  node.c
test/: test_binary_gui.c  test_binary_node.c  test_node.c
